// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tests on android renders loading state 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <View
        aspectRatio={1.5}
        style={Object {}}
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "&preview=true",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": "100%",
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            />
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  null,
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <BVLinearGradient
                  colors={
                    Array [
                      "#F9F9F9",
                      "#EDEDED",
                    ]
                  }
                  end={
                    Object {
                      "x": -0.09302964577578221,
                      "y": 0.11488204504197774,
                    }
                  }
                  locations={
                    Array [
                      0,
                      1,
                    ]
                  }
                  start={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Array [
            Object {
              "height": 24,
              "marginBottom": 10,
              "maxWidth": 300,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "height": 10,
              "marginBottom": 10,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "height": 10,
              "marginBottom": 10,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "height": 10,
              "marginBottom": 10,
            },
            Object {
              "marginBottom": 0,
              "maxWidth": 240,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#F9F9F9",
              "#EDEDED",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Card tests on android renders vertical by default 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <View
        aspectRatio={1.5}
        style={Object {}}
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360&preview=true",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": "100%",
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": "100%",
                  },
                  undefined,
                ]
              }
            />
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  null,
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <BVLinearGradient
                  colors={
                    Array [
                      "#F9F9F9",
                      "#EDEDED",
                    ]
                  }
                  end={
                    Object {
                      "x": -0.09302964577578221,
                      "y": 0.11488204504197774,
                    }
                  }
                  locations={
                    Array [
                      0,
                      1,
                    ]
                  }
                  start={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Some text
      </Text>
    </View>
  </View>
</View>
`;

exports[`Card tests on android renders without image 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        No image
      </Text>
    </View>
  </View>
</View>
`;

exports[`Card tests on android renders without image url 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        No image URL
      </Text>
    </View>
  </View>
</View>
`;
